--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,10 +1,10 @@
-.btnColor {
-  background-color: #4caf50;
-  border: none;
+.btn {
+  padding: 8px 12px;
+  border-radius: 3px;
+  border: 0;
+}
+
+.btn-primary {
+  background-color: #0d6efd;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
 }
